Setup linter with Airbnb standards + added new routes :unicorn:
